# point-cloud-operations-project

./: CMakeLists.txt  README.md  main.cpp
src/: mapping.cpp  mapping.h  point_cloud_processor.cpp  point_cloud_processor.h  point_cloud_visualizer.cpp  point_cloud_visualizer.h
